5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1752_3090.log
== TEST (2019-05-16 16:24:00) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		print(Abaixo)
	else:(somatorio < 0):
			print(Acima)
			

-- ERROR:
File "XXXX", line 8
    else:(somatorio < 0):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:08) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		print(Abaixo)
	else:(somatorio < 0)
			print(Acima)
			

-- ERROR:
File "XXXX", line 9
    print(Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:15) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		print(Abaixo)
	else:(somatorio < 0)
		print(Acima)
			

-- ERROR:
File "XXXX", line 9
    print(Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:58) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:09) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
	print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:23) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:24) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:25) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:26) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- EXECUTION TIME:
0.493467
-- ERROR:
  File "/home/codebench/codes/1752/3090/main.py", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:27) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:28) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:28) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:29) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:30) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:30) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:30) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:03) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
		print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:14) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 
while(0 < N < 7):
	somatorio = N + 7
	if(somatorio > 0):
		mensagem = (Abaixo)
	else:(somatorio < 0)
		mensagem = (Acima)
	print(mensagem)		
			

-- ERROR:
File "XXXX", line 9
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:27) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 

while(0 < N < 7):
	somatorio = N + 7
	
	if(somatorio > 0):
		mensagem = (Abaixo)
		cont = cont + 1
	else:(somatorio < 0)
		mensagem = (Acima)
		cont = 1 *(-1)
	print(mensagem)		
			

-- ERROR:
File "XXXX", line 12
    mensagem = (Acima)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:47) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 

while(0 < N < 7):
	somatorio = N + 7
	
	if(somatorio > 0):
		mensagem = ("Abaixo")
		cont = cont + 1
	else:(somatorio < 0)
		mensagem = ("Acima")
		cont = 1 *(-1)
	print(mensagem)		
			

-- ERROR:
File "XXXX", line 12
    mensagem = ("Acima")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:02) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 

while(0 < N < 7):
	somatorio = N + 7
	
	if(somatorio = 0):
		mensagem = ("Abaixo")
		cont = cont + 1
	else:(somatorio < 0)
		mensagem = ("Acima")
		cont = 1 *(-1)
	print(mensagem)		
			

-- ERROR:
File "XXXX", line 8
    if(somatorio = 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:43:03) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 

while(0 < N < 7):
	somatorio = N + 7
	
	if(somatorio = 0):
		mensagem = ("Abaixo")
		cont = cont + 1
	else:(somatorio < 0)
		mensagem = ("Acima")
		cont = 1 *(-1)
	print(mensagem)		
			

-- EXECUTION TIME:
0.141538
-- ERROR:
  File "/home/codebench/codes/1752/3090/main.py", line 8
    if(somatorio = 0):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:03) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 

while(0 < N < 7):
	somatorio = N + 7
	
	if(somatorio = 0):
		mensagem = ("Abaixo")
		cont = cont + 1
	else:(somatorio < 0)
		mensagem = ("Acima")
		cont = 1 *(-1)
	print(mensagem)		
			

-- ERROR:
File "XXXX", line 8
    if(somatorio = 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:43:04) 
-- CODE:
N = int(input("movimentos da lagartixa:"))

cont = 0 

while(0 < N < 7):
	somatorio = N + 7
	
	if(somatorio = 0):
		mensagem = ("Abaixo")
		cont = cont + 1
	else:(somatorio < 0)
		mensagem = ("Acima")
		cont = 1 *(-1)
	print(mensagem)		
			

-- EXECUTION TIME:
0.217461
-- ERROR:
  File "/home/codebench/codes/1752/3090/main.py", line 8
    if(somatorio = 0):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
